--- a/basket.html
+++ b/basket.html
@@ -157,14 +157,11 @@ if (cart.length === 0) {
     cart.forEach(item => {
         const itemDiv = document.createElement('div');
         itemDiv.className = 'basket-item';
-        let vegSymbol = item.veg ? `<span class="veg-symbol">V</span>` : '';
+        const vegSymbol = item.veg ? `<span class="veg-symbol">V</span>` : '';
         itemDiv.innerHTML = `
             <div class="basket-item-header">
                 <div class="basket-item-name">${item.name}${vegSymbol}</div>
-                <div class="basket-item-price">
-                    <span style="text-decoration: line-through; color:#888;">£8.00</span> 
-                    <span style="font-weight:bold; color:#222;">£${item.price.toFixed(2)}</span>
-                </div>
+                <div class="basket-item-price">£${item.price.toFixed(2)}</div>
             </div>
             <div class="basket-item-description">${item.description}</div>
         `;
