--- a/checkout.html
+++ b/checkout.html
@@ -6,74 +6,23 @@
 <title>Checkout - Henrik's Firewood Pizza</title>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #fef5e6;
-    color: #242424;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
-header { width: 100%; display: flex; justify-content: center; margin-bottom: 20px; }
+body { margin:0; font-family:Arial,sans-serif; background-color:#fef5e6; color:#242424; display:flex; flex-direction:column; align-items:center; padding:20px;}
+header { width:100%; display:flex; justify-content:center; margin-bottom:20px;}
 header h1 { font-family: 'Cinzel', serif; font-size: 2rem; }
 
-.cart-summary, .checkout-form {
-    width: 90%;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 20px;
-    align-items: center;
-}
-.cart-item {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 10px 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-.cart-item-name { font-weight: bold; }
-.cart-item-price { font-weight: bold; }
+.cart-summary, .checkout-form { width:90%; max-width:600px; display:flex; flex-direction:column; gap:10px; margin-bottom:20px; align-items:center;}
+.cart-item { display:flex; justify-content:space-between; width:100%; background-color:#fff; padding:10px 15px; border-radius:5px; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.cart-item-name { font-weight:bold; }
+.cart-item-description { font-size:0.9rem; opacity:0.8; }
+.cart-item-price { font-weight:bold; }
 
-label { font-weight: bold; margin-top: 10px; }
-input, textarea, select {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-family: Arial, sans-serif;
-}
-button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 20px;
-}
-button:hover { background-color: #45a049; }
+label { font-weight:bold; margin-top:10px; }
+input, textarea, select { width:100%; padding:8px; margin-top:5px; border-radius:5px; border:1px solid #ccc; font-family:Arial,sans-serif; }
+button { background-color:#4CAF50; color:white; border:none; padding:10px 20px; font-weight:bold; cursor:pointer; border-radius:5px; margin-top:20px; }
+button:hover { background-color:#45a049; }
 
-.total-box {
-    font-weight: bold;
-    font-size: 1.2rem;
-    margin-top: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-#paypal-button-container {
-    margin-top: 20px;
-    width: 100%;
-    max-width: 400px;
-}
+.total-box { font-weight:bold; font-size:1.2rem; margin-top:10px; width:100%; display:flex; justify-content:space-between; }
+#paypal-button-container { margin-top:20px; width:100%; max-width:400px; }
 </style>
 </head>
 <body>
@@ -132,7 +81,7 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// Load cart and calculate total
+// Load cart
 const cart = JSON.parse(localStorage.getItem('cart')) || [];
 const cartSummary = document.getElementById('cartSummary');
 const totalPriceEl = document.getElementById('totalPrice');
@@ -141,9 +90,14 @@ let total = 0;
 cart.forEach(item => {
     const div = document.createElement('div');
     div.className = 'cart-item';
+    const vegSymbol = item.veg ? '<span style="color:green;font-weight:bold;">V</span>' : '';
     div.innerHTML = `
-        <span class="cart-item-name">${item.name}${item.veg ? ' <span style="color:green;font-weight:bold;">V</span>' : ''}</span>
-        <span class="cart-item-price">£${item.price.toFixed(2)}</span>`;
+        <div class="cart-item-header">
+            <span class="cart-item-name">${item.name} ${vegSymbol}</span>
+            <span class="cart-item-price">£${item.price.toFixed(2)}</span>
+        </div>
+        <div class="cart-item-description">${item.description}</div>
+    `;
     cartSummary.appendChild(div);
     total += item.price;
 });
@@ -194,7 +148,7 @@ function setupPayPal() {
             });
         },
         onApprove: async (data, actions) => {
-            const details = await actions.order.capture();
+            await actions.order.capture();
             const name = document.getElementById('customerName').value.trim();
             const orderType = orderTypeEl.value;
             const deliveryAddress = document.getElementById('deliveryAddress').value.trim();
@@ -213,7 +167,7 @@ function setupPayPal() {
                 type: orderType,
                 address: orderType==='delivery'?deliveryAddress:null,
                 pickupTime: orderType==='pickup'?pickupTime:null,
-                cart,
+                cart, // full cart including description with toppings
                 notes: extraNotes,
                 total,
                 status: "pending",
