--- a/checkout.html
+++ b/checkout.html
@@ -9,18 +9,16 @@
 body { margin:0; font-family:Arial,sans-serif; background-color:#fef5e6; color:#242424; display:flex; flex-direction:column; align-items:center; padding:20px;}
 header { width:100%; display:flex; justify-content:center; margin-bottom:20px;}
 header h1 { font-family: 'Cinzel', serif; font-size: 2rem; }
-
 .cart-summary, .checkout-form { width:90%; max-width:600px; display:flex; flex-direction:column; gap:10px; margin-bottom:20px; align-items:center;}
-.cart-item { display:flex; justify-content:space-between; width:100%; background-color:#fff; padding:10px 15px; border-radius:5px; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.cart-item { display:flex; flex-direction:column; justify-content:space-between; width:100%; background-color:#fff; padding:10px 15px; border-radius:5px; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.cart-item-header { display:flex; justify-content:space-between; width:100%; }
 .cart-item-name { font-weight:bold; }
-.cart-item-description { font-size:0.9rem; opacity:0.8; }
-.cart-item-price { font-weight:bold; }
-
+.cart-item-description { font-size:0.9rem; opacity:0.8; margin-top:5px;}
+.cart-item-price { font-weight:bold; margin-top:5px; }
 label { font-weight:bold; margin-top:10px; }
 input, textarea, select { width:100%; padding:8px; margin-top:5px; border-radius:5px; border:1px solid #ccc; font-family:Arial,sans-serif; }
 button { background-color:#4CAF50; color:white; border:none; padding:10px 20px; font-weight:bold; cursor:pointer; border-radius:5px; margin-top:20px; }
 button:hover { background-color:#45a049; }
-
 .total-box { font-weight:bold; font-size:1.2rem; margin-top:10px; width:100%; display:flex; justify-content:space-between; }
 #paypal-button-container { margin-top:20px; width:100%; max-width:400px; }
 </style>
@@ -50,6 +48,9 @@ button:hover { background-color:#45a049; }
     <div id="deliveryAddressContainer" style="display:none;">
         <label for="deliveryAddress">Delivery Address:</label>
         <input type="text" id="deliveryAddress" placeholder="Only Sandy Lane allowed">
+
+        <label for="deliveryTime">Delivery Time:</label>
+        <input type="time" id="deliveryTime">
     </div>
 
     <div id="pickupTimeContainer" style="display:none;">
@@ -87,16 +88,21 @@ const cartSummary = document.getElementById('cartSummary');
 const totalPriceEl = document.getElementById('totalPrice');
 let total = 0;
 
+// Render cart
 cart.forEach(item => {
     const div = document.createElement('div');
     div.className = 'cart-item';
     const vegSymbol = item.veg ? '<span style="color:green;font-weight:bold;">V</span>' : '';
+    let toppingsText = '';
+    if(item.toppings && item.toppings.length) {
+        toppingsText = '<br><strong>Toppings:</strong> ' + item.toppings.join(', ');
+    }
     div.innerHTML = `
         <div class="cart-item-header">
             <span class="cart-item-name">${item.name} ${vegSymbol}</span>
             <span class="cart-item-price">£${item.price.toFixed(2)}</span>
         </div>
-        <div class="cart-item-description">${item.description}</div>
+        <div class="cart-item-description">${item.description}${toppingsText}</div>
     `;
     cartSummary.appendChild(div);
     total += item.price;
@@ -152,6 +158,7 @@ function setupPayPal() {
             const name = document.getElementById('customerName').value.trim();
             const orderType = orderTypeEl.value;
             const deliveryAddress = document.getElementById('deliveryAddress').value.trim();
+            const deliveryTime = document.getElementById('deliveryTime').value;
             const pickupTime = document.getElementById('pickupTime').value;
             const extraNotes = document.getElementById('extraNotes').value.trim();
 
@@ -161,16 +168,28 @@ function setupPayPal() {
             const orderKey = orderNumber.toString().padStart(4,'0');
             const formattedOrderNumber = '#' + orderKey;
 
+            // Prepare cart data with descriptions
+            const cartData = cart.map(item => ({
+                name: item.name,
+                price: item.price,
+                veg: item.veg,
+                toppings: item.toppings || [],
+                description: item.description
+            }));
+
+            // Create order data
             const orderData = {
                 orderNumber: formattedOrderNumber,
                 name,
                 type: orderType,
                 address: orderType==='delivery'?deliveryAddress:null,
+                deliveryTime: orderType==='delivery'?deliveryTime:null,
                 pickupTime: orderType==='pickup'?pickupTime:null,
-                cart, // full cart including description with toppings
+                cart: cartData,
                 notes: extraNotes,
                 total,
                 status: "pending",
+                stage: "preparing",
                 timestamp: Date.now()
             };
 
@@ -181,7 +200,7 @@ function setupPayPal() {
             localStorage.removeItem('orderNotes');
 
             alert(`Order placed! Your order number is ${formattedOrderNumber}`);
-            window.location.href = 'track.html';
+            window.location.href = 'index.html';
         },
         onError: (err) => { console.error(err); alert("PayPal payment error."); }
     }).render('#paypal-button-container');
